other/cv-app-lb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp-cv
        image: bjnandi/cv:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: testapp-svc
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
