other/cv-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-dep
  labels:
    app: cv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cv
  template:
    metadata:
      labels:
        app: cv
    spec:
      containers:
      - name: c
        image: bjnandi/cv:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: cv-svc
spec:
  selector:
    app: cv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
